app/globals.css
@import "tailwindcss";
/*   ---break---    */
@custom-variant dark (&:is(.dark *));



.noti-link a {
    color:var(--color-primary);
}

.post-img img {
    position:relative!important;
}

.react-datepicker-ignore-onclickoutside {
    margin-left: 5px;
}

.react-datepicker-popper {
    left:10px !important;
}

@layer components {
    .main-container {
        @apply flex w-lg min-h-screen flex-1 flex-col items-center px-6 pt-3 max-md:pb-32 md:px-25 overflow-auto xl:mt-10;
    }

    .calendar-container {
        @apply flex min-h-screen flex-1 flex-col items-center px-6 pt-3 max-md:pb-32 sm:px-10 overflow-auto;
    }

    /* .center-box {
        @apply bg-white px-5 py-5 rounded-lg mt-5 text-xl;
    } */

    .rounded-box {
        @apply flex flex-col gap-2 rounded-lg p-3;
    }

    .avatar {
        @apply w-[50px] h-[50px] rounded-full;
    }

    .leftsidebar {
        @apply max-w-sm sticky left-0 top-0 z-20 flex h-screen flex-col justify-between overflow-hidden max-md:hidden xl:w-sm;
    }

    .avatar-profile {
        @apply w-35 h-35 rounded-2xl border-2 outline-6 outline-offset-6 outline-amber-400 border-amber-200 mb-8;
    }

    .leftIcon {
        @apply text-3xl fill-[#f3e5c9];
    }

    .bottombar {
        @apply fixed flex bottom-0 z-10 w-full rounded-t-3xl bg-transparent p-4 backdrop-blur-sm sm:px-7 md:hidden justify-center;
    }

    .bottombar_container {
        @apply flex items-center justify-between gap-3 sm:gap-5;
    }

    .bottombar_link {
        @apply relative flex flex-col items-center gap-2 rounded-lg p-2 sm:flex-1 sm:px-2 sm:py-2.5;
    }

    .topbar {
        @apply flex w-full items-center;
    }

    .head-text {
        @apply text-2xl font-bold text-light-1;
    }

    .rightsidebar {
        @apply w-xs sticky right-0 top-0 z-20 h-screen justify-between gap-3 overflow-auto max-xl:hidden;
    }

    .user-card {
        @apply flex flex-col;
    }

    .user-card_avatar {
        @apply flex flex-1 items-start justify-start gap-3 sm:items-center;
    }

    .user-card_btn {
        @apply h-auto min-w-[74px] rounded-lg bg-primary text-[12px];
    }

    /*       .account-form_input {
            @apply border border-dark-4 bg-dark-3 text-light-1 !important;
        }

        .no-focus {
            @apply focus-visible:ring-0 focus-visible:ring-transparent focus-visible:ring-offset-0 !important;
        }

        .group-card {
            @apply w-full rounded-lg bg-dark-3 px-4 py-5 sm:w-96;
        }

        .group-card_btn {
            @apply rounded-lg bg-primary-500 px-5 py-1.5 text-small-regular !text-light-1 !important;
        }

        .tweet-card_bar {
            @apply relative mt-2 w-0.5 grow rounded-full bg-neutral-800;

        }

        .pagination {
            @apply mt-10 flex w-full items-center justify-center gap-5;
        }

        .tab {
            @apply flex min-h-[50px] flex-1 items-center gap-3 bg-dark-2 text-light-2 data-[state=active]:bg-[#0e0e12] data-[state=active]:text-light-2 !important;
        }

        .comment-form {
            @apply mt-10 flex items-center gap-4 border-y border-y-dark-4 py-5 max-xs:flex-col !important;
        }

        .comment-form_btn {
            @apply rounded-3xl bg-primary-500 px-8 py-2 !text-small-regular text-light-1 max-xs:w-full !important;
        }

        .notification-card {
            @apply flex items-center gap-2 rounded-md bg-dark-2 px-7 py-4;
        }

        .searchbar {
            @apply flex gap-1 rounded-lg bg-dark-3 px-4 py-2;
        }

        .searchbar_input {
            @apply border-none bg-dark-3 text-base-regular text-light-4 outline-none !important;
        }    */
}

@layer utilities {
    .custom-scrollbar::-webkit-scrollbar {
        width: 3px;
        height: 3px;
        border-radius: 2px;
    }

    .custom-scrollbar::-webkit-scrollbar-track {
        background: #09090a;
    }

    .custom-scrollbar::-webkit-scrollbar-thumb {
        background: #5c5c7b;
        border-radius: 50px;
    }

    .custom-scrollbar::-webkit-scrollbar-thumb:hover {
        background: #7878a3;
    }
}

@layer base {
    :root {
        --radius: 0.5rem;  
    }  
}

/*   ---break---    */

@theme inline {
    --radius-sm: calc(var(--radius) - 4px);
    --radius-md: calc(var(--radius) - 2px);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) + 4px);
    --color-background: var(--background);
    --color-foreground: var(--foreground);
    --color-card: var(--card);
    --color-card-foreground: var(--card-foreground);
    --color-popover: var(--popover);
    --color-popover-foreground: var(--popover-foreground);
    --color-primary: var(--primary);
    --color-primary-foreground: var(--primary-foreground);
    --color-secondary: var(--secondary);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-muted: var(--muted);
    --color-muted-foreground: var(--muted-foreground);
    --color-accent: var(--accent);
    --color-accent-foreground: var(--accent-foreground);
    --color-destructive: var(--destructive);
    --color-border: var(--border);
    --color-input: var(--input);
    --color-ring: var(--ring);
    --color-chart-1: var(--chart-1);
    --color-chart-2: var(--chart-2);
    --color-chart-3: var(--chart-3);
    --color-chart-4: var(--chart-4);
    --color-chart-5: var(--chart-5);
    --color-sidebar: var(--sidebar);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-ring: var(--sidebar-ring);
}

/*   ---break---    */

:root {
    --radius: 0.625rem;
    --background: oklch(1 0 0);
    --foreground: oklch(0.145 0 0);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.145 0 0);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.145 0 0);
    --primary: oklch(0.205 0 0);
    --primary-foreground: oklch(0.985 0 0);
    --secondary: oklch(0.97 0 0);
    --secondary-foreground: oklch(0.205 0 0);
    --muted: oklch(0.97 0 0);
    --muted-foreground: oklch(0.556 0 0);
    --accent: oklch(0.97 0 0);
    --accent-foreground: oklch(0.205 0 0);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.922 0 0);
    --input: oklch(0.922 0 0);
    --ring: oklch(0.708 0 0);
    --chart-1: oklch(0.646 0.222 41.116);
    --chart-2: oklch(0.6 0.118 184.704);
    --chart-3: oklch(0.398 0.07 227.392);
    --chart-4: oklch(0.828 0.189 84.429);
    --chart-5: oklch(0.769 0.188 70.08);
    --sidebar: oklch(0.985 0 0);
    --sidebar-foreground: oklch(0.145 0 0);
    --sidebar-primary: oklch(0.205 0 0);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.97 0 0);
    --sidebar-accent-foreground: oklch(0.205 0 0);
    --sidebar-border: oklch(0.922 0 0);
    --sidebar-ring: oklch(0.708 0 0);
}

/*   ---break---    */

.dark {
    --background: oklch(0.145 0 0);
    --foreground: oklch(0.985 0 0);
    --card: oklch(0.205 0 0);
    --card-foreground: oklch(0.985 0 0);
    --popover: oklch(0.205 0 0);
    --popover-foreground: oklch(0.985 0 0);
    --primary: oklch(0.922 0 0);
    --primary-foreground: oklch(0.205 0 0);
    --secondary: oklch(0.269 0 0);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.269 0 0);
    --muted-foreground: oklch(0.708 0 0);
    --accent: oklch(0.269 0 0);
    --accent-foreground: oklch(0.985 0 0);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.556 0 0);
    --chart-1: oklch(0.488 0.243 264.376);
    --chart-2: oklch(0.696 0.17 162.48);
    --chart-3: oklch(0.769 0.188 70.08);
    --chart-4: oklch(0.627 0.265 303.9);
    --chart-5: oklch(0.645 0.246 16.439);
    --sidebar: oklch(0.205 0 0);
    --sidebar-foreground: oklch(0.985 0 0);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.269 0 0);
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.556 0 0);
}

/*   ---break---    */

@layer base {
  * {
    @apply border-border outline-ring/50;
    }
  body {
    @apply bg-background text-foreground;
    }
}

@theme {
    --color-primary: #3126FF;
    --color-primary-500: #9dcfff;
    --color-primary-dark:#000d73;
    --color-secondary: #600C00;
    --color-secondary-500: #BE4F00;
    --color-orange: #ff7f25;
    --color-purple: #9422B4;
    --color-green: #2CFF00;
    --color-lightgray: #ddd;
    --color-logout-btn: #ff5a5a;
    --color-navbar-menu: rgba(16,16,18,0.6);

    --color-dark-1: #000;
    --color-dark-2: #121417;
    --color-dark-3: #101012;
    --color-dark-4: #1f1f22;

    --color-light-1: #fff;
    --color-light-2: #efefef;
    --color-light-3: #7878a3;
    --color-light-4: #5c5c7b;

    --color-gray-1: #697c89;
    --color-glassmorphism: rgba(16,16,18,0.6);
}

@keyframes hue-rotation {
  /* Start with no hue rotation */
  0% {
    filter: hue-rotate(0deg) blur(3px);
  }
  100% {
    filter: hue-rotate(360deg) blur(3px);
  }
}

@keyframes fade-in-out {
  /* Start with no hue rotation */
  0% {
    opacity: 0;
  }
  10% {
    opacity: 1;
  }
  80% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

